--- a/css/style.css
+++ b/css/style.css
@@ -193,3 +193,43 @@ main{
     border-color: black; /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
 }
+
+
+#bottomtextdiv{
+    width: 100%;
+    height: 300px;
+    margin-top: 100px;
+    border-color: black; /*DebugFeature*/
+    border-style: dotted; /*DebugFeature*/
+    background-color: purple; /*DebugFeature*/
+}
+
+
+#logoboxbottom{
+    display: flex;
+    width: 100%;
+    height: 700px;
+    border-color: black; /*DebugFeature*/
+    border-style: dotted; /*DebugFeature*/
+    background-color: purple; /*DebugFeature*/
+}
+
+.logobox{
+    display: flex;
+    flex-wrap: wrap;
+    width: calc(100% / 3);
+    border-color: white; /*DebugFeature*/
+    border-style: dotted; /*DebugFeature*/
+    background-color: green; /*DebugFeature*/
+}
+
+
+.logo{
+    width: 50%;
+    height: 50%;
+    border-color: black; /*DebugFeature*/
+    border-style: dotted; /*DebugFeature*/
+    background-color: rgb(255, 217, 0); /*DebugFeature*/
+}
+
+
