--- a/css/style.css
+++ b/css/style.css
@@ -11,18 +11,66 @@
 }
 
 .topheader.debug {
-    background-color: aqua;
+    background-color: white;
     width: 100%;
     height: 100px;
 }
 
 .headerbox{
+    display: flex;
+    justify-content: space-between;
     height: 70%;
-    width: 400px;
-    background-color: blue;
+    width: 30%;
     margin: 20px;
-    border-color:  white; /*DebugFeature*/
+    border-color:  rgb(0, 0, 0); /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
+}
+.headerbox img{
+    height: 25px;
+    width: 120px;
+    align-self: center;
+}
+.headerbox li{
+    margin: 25px;
+}
+ul{
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    align-self: center;
+    margin-left: 20px;
+    width: 100%;
+}
+
+#loginbutton{
+    width: 50px;
+    height: 25px;
+    align-self: center;
+    background-color: rgb(0, 98, 255);
+    border: 0px;
+    color: white;
+}
+
+.headerleftbox{
+    display: flex;
+    justify-content: flex-end;
+    height: 70%;
+    width: 30%;
+    margin: 20px;
+    border-color:  rgb(0, 0, 0); /*DebugFeature*/
+    border-style: dotted; /*DebugFeature*/
+}
+
+#leftulheader{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    list-style: none;
+    justify-content: space-between;
+    align-self: center;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
 .bottomheader{
