--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,6 @@
     height: 70%;
     width: 30%;
     margin: 20px;
-    border-color:  rgb(0, 0, 0); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 .headerbox img{
     height: 25px;
@@ -58,8 +56,6 @@ ul{
     height: 70%;
     width: 30%;
     margin: 20px;
-    border-color:  rgb(0, 0, 0); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 #leftulheader{
@@ -75,30 +71,54 @@ ul{
 
 .bottomheader{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     background-color: cornflowerblue;
     width: 100%;
-    height: 500px; 
+    height: 600px; 
 }
-h1{
-    display: inline-block;
+
+#headerbottombox{
+    width: 60%;
+    align-self: center;
 }
+
 
 #bottomheaderbox{
     display: flex;
-    margin-top: 100px;
-    background-color: blue; /*DebugFeature*/
-    width: 70%;
-    height: 400px; /*DebugFeature*/
-}
 
+    width: 100%;
+    height: 400px; /*DebugFeature*/
+    margin-top: 30px;
+}
+#headerbottombox h1{
+    font-size: 50px;
+    height: 110px;
+    margin-top: 50px;
+}
 
 #bottomheaderinternalboxtext{
     height: 100%;
-    width: 35%;
-    background-color: aliceblue; /*DebugFeature*/
-    border-color:  black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    width: 35%
+}
+
+#bottomheaderinternalboxtext p{
+    margin-bottom: 40px;
+    font-size: 19px;
+}
+
+#bottomheaderinternalboxtext button{
+        height: 30px;
+        width: 200px;
+        margin-bottom: 40px;
+        background-color: rgb(5, 70, 126);
+        color: white;
+        border-style: none;
+}
+
+.fa-arrow-down:before {
+    content: "\f063";
+    font-size: 40px;
 }
 
 #bottomheaderinternalboximg{
