--- a/css/style.css
+++ b/css/style.css
@@ -144,12 +144,18 @@ main{
     border-color:  rgb(0, 0, 0); /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
 }
+#iconmainbox{
+   margin-left: 20px;
+}
+.mainbox h1{
+    margin-bottom: 60px;
+}
 
 #businessplanbox{
     display: flex;
     width: 100%;
     height: 700px; /*DebugFeature*/
-    margin-top: 90px;
+    margin-top: 50px;
     background-color: aqua ; /*DebugFeature*/
     border-color: white; /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
@@ -375,3 +381,7 @@ footer{
     border-color: rgb(81, 0, 255); /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
 }
+
+
+
+
