--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+    font-family: sans-serif;
+}
+
 .topheader{
     display: flex;
     justify-content: space-between;
@@ -214,42 +218,59 @@ ul .bottomtext{
     flex-direction: column;
     margin-top: 50px;
     width: 100%;
-    height: 250px; /*DebugFeature*/
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    margin-bottom: 200px;
 }
 
 #officeupperbox{
+    text-align: center;
+    padding: 10px;
     width: 100%;
     height: 40px;
-    background-color: aqua; /*DebugFeature*/
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    border-style: groove;
 }
 
+.fa-building:before {
+    content: "\f1ad";
+    margin-right: 5px;
+}
 
 .containerbusinessbox{
     width: 100%;
     height: 100%;
     display: flex;
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    border-style: groove;
+}
+
+#titleenterprise{
+    margin-bottom: 10px;
+}
+
+#enterprisetext{
+    margin-bottom: 30px;
+}
+#enterprisefulltext{
+    margin-bottom: 50px;
+}
+
+#contactufficiovenditebtn{
+        height: auto;
+        width: auto;
+        padding: 10px 30px;
+        background-color: rgb(5, 70, 126);
+        color: white;
+        border-style: none;
+        margin-top: 20px;
 }
 
 #officeleftbox{
     width: 70%;
     height: 100%;
-    background-color: aqua; /*DebugFeature*/
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 #officerightbox{
+    text-align: center;
     width: 30%;
     height: 100%;
-    background-color: aqua; /*DebugFeature*/
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 #becomepartnerbox{
@@ -257,16 +278,15 @@ ul .bottomtext{
     width: 100%;
     height: 400px;
     margin-top: 50px;
-    background-color: aqua; /*DebugFeature*/
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 
 .becomepartnerboximg{
+    background-image: url(../img/partner.png);
+    background-size: contain;
+    background-repeat: no-repeat;
     width: 60%;
     height: 100%;
-    background-color: blue; /*DebugFeature*/
     border-color: white; /*DebugFeature*/
     border-style: dotted; /*DebugFeature*/
 }
@@ -274,9 +294,15 @@ ul .bottomtext{
 .becomepartnerboxtext{
     width: 40%;
     height: 100%;
-    background-color: blue; /*DebugFeature*/
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+}
+#findpartnerbtn{
+        height: auto;
+        width: auto;
+        padding: 10px 30px;
+        border-style: none;
+        margin-top: 20px;
+        border-style: groove;
+        background-color: white;
 }
 
 #dropboxbusinessbox{
