--- a/css/style.css
+++ b/css/style.css
@@ -90,9 +90,7 @@ ul{
 
 #bottomheaderbox{
     display: flex;
-
     width: 100%;
-    height: 400px; /*DebugFeature*/
     margin-top: 30px;
 }
 #headerbottombox h1{
@@ -145,8 +143,6 @@ main{
     display: flex;
     margin-top: 100px;
     width: 60%;  
-    border-color:  rgb(0, 0, 0); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 #iconmainbox{
    margin-left: 20px;
@@ -287,13 +283,15 @@ ul .bottomtext{
     background-repeat: no-repeat;
     width: 60%;
     height: 100%;
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 .becomepartnerboxtext{
     width: 40%;
     height: 100%;
+}
+
+.dropboxbusinesscontainer h3{
+    margin-bottom: 20px;
 }
 #findpartnerbtn{
         height: auto;
@@ -310,10 +308,6 @@ ul .bottomtext{
     flex-wrap: wrap;
     margin-top: 150px;
     width: 100%;
-    height: 800px;
-    background-color: aqua; /*DebugFeature*/
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 .dropboxbusinesscontainer{
@@ -321,17 +315,21 @@ ul .bottomtext{
     flex-direction: column;
     margin: 10px;
     width: calc(100% / 3 - 20px );
-    background-color: blueviolet; /*DebugFeature*/
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
 }
 
 .dropcontainerbox{
     width: 100%;
-    height: calc(100% / 3); /*DebugFeature*/
-    background-color: rgb(21, 230, 21); /*DebugFeature*/
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    height: auto; 
+}
+
+.dropcontainerbox img{
+    height: 100%;
+    width: 100%;
+}
+
+#bottomtextdiv h2{
+    font-size: 36px;
+    margin-bottom: 40px;
 }
 
 
@@ -339,9 +337,6 @@ ul .bottomtext{
     width: 100%;
     height: 300px;
     margin-top: 100px;
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
-    background-color: purple; /*DebugFeature*/
 }
 
 
