--- a/css/style.css
+++ b/css/style.css
@@ -41,8 +41,8 @@ ul{
     list-style: none;
     justify-content: space-between;
     align-self: center;
-    margin-left: 20px;
     width: 100%;
+    margin-bottom: 50px;
 }
 
 #loginbutton{
@@ -168,6 +168,8 @@ main{
     width: calc(100% /3);
     border-style: groove;
 }
+
+
 
 .businessplan ul{
     display: flex;
