--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@
 
 html{
     font-family: sans-serif;
+    font-size: 18px;
 }
 
 .topheader{
@@ -91,17 +92,17 @@ ul{
 #bottomheaderbox{
     display: flex;
     width: 100%;
-    margin-top: 30px;
 }
 #headerbottombox h1{
     font-size: 50px;
     height: 110px;
-    margin-top: 50px;
+    margin-top: 100px;
 }
 
 #bottomheaderinternalboxtext{
     height: 100%;
-    width: 35%
+    width: 35%;
+    padding: 70px 0px;
 }
 
 #bottomheaderinternalboxtext p{
@@ -124,8 +125,8 @@ ul{
 }
 
 #bottomheaderinternalboximg{
-    height: 115%;
-    width: 65%;
+    position: relative;
+    margin-top: 70px;
 }
 
 #bottomheaderinternalboximg img{
@@ -346,27 +347,71 @@ ul .bottomtext{
     display: flex;
     width: 100%;
     height: 700px;
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
-    background-color: purple; /*DebugFeature*/
+    background-color: rgba(240, 248, 255, 0.912);
 }
 
 .logobox{
     display: flex;
     flex-wrap: wrap;
     width: calc(100% / 3);
-    border-color: white; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
-    background-color: green; /*DebugFeature*/
 }
 
 
 .logo{
+    display: flex;
+    justify-content: center;
     width: 50%;
     height: 50%;
-    border-color: black; /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
-    background-color: rgb(255, 217, 0); /*DebugFeature*/
+}
+
+.logo img{
+    align-self: center;
+    max-width: 80%;
+    max-height: 30%;
+}
+
+#logoflorida img{
+    align-self: center;
+    max-width: 80%;
+    max-height: 10%;
+}
+
+#logoarizona{
+    background-color: rgb(151, 26, 59);
+}
+
+#logoflorida{
+    background-color: rgb(0, 158, 231) ;
+}
+
+#logotopps{
+    background-color: red;
+}
+
+#logobicycle{
+    background-color: rgb(163, 5, 5);
+}
+
+#logohearst{
+    background-color: rgb(156, 193, 208);
+}
+
+#logoplanet{
+    background-color: blue;
+}
+
+#logoclear{
+    background-color: yellow;
+}
+
+#logotopps img{
+    align-self: center;
+    max-width: 60%;
+    max-height: 30%;
+}
+
+#logodesignit{
+    background-color: rgb(89, 192, 89);
 }
 
 #bottomcontainerbox{
