--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,9 @@ main{
     border-style: groove;
 }
 
-
+.businessplan br{
+    margin-top: 5px;
+}
 
 .businessplan ul{
     display: flex;
@@ -258,7 +260,10 @@ ul .bottomtext{
     height: 100%;
     display: flex;
     border-style: groove;
+    padding: 20px 20px;
 }
+
+
 
 #titleenterprise{
     margin-bottom: 10px;
@@ -505,7 +510,7 @@ ul .bottomtext{
 
 #faqbox{
     width: 60%;
-    height: 100%; /*DebugFeature*/
+    height: 100%; 
 }
 
 #faqtextbox{
@@ -539,8 +544,7 @@ ul .bottomtext{
     border-color: rgb(255, 255, 255);
     border-style: dotted;
     align-content: center;
-    border-color: rgb(255, 255, 255); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+   
 }
 
 
@@ -559,16 +563,15 @@ footer{
     height: 90%;
     width: 70%;
     margin-top: 20px;
-    border-color: rgb(255, 255, 255); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+   
 }
 
 #footerlists{
+    margin-top: 100px;
     display: flex;
     height: 85%;
     width: 100%;
-    border-color: rgb(0, 170, 255); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+    
 }
 
 
@@ -576,8 +579,7 @@ footer{
     width: calc(100% / 5);
     height: 100%;
     color: white;
-    border-color: rgb(81, 0, 255); /*DebugFeature*/
-    border-style: dotted; /*DebugFeature*/
+
 }
 
 .footerlist ul{
